--- a/src/templates/calu.html
+++ b/src/templates/calu.html
@@ -13,6 +13,14 @@
 		<input type="submit" value="add">
 	</form>
 	<br>
+	<form action="/minus" method="post">
+		<label for="num1">num1:</label>
+		<input type="text" id="num1" name="num1"><br><br>
+		<label for="num2">num2:</label>
+		<input type="text" id="num2" name="num2"><br><br>
+		<input type="submit" value="minus">
+	</form>
+	<br>
 </form>``	
 </body>
 </html>
